--- a/compose.yml
+++ b/compose.yml
@@ -6,4 +6,8 @@
    websimple:
      build: ./websimple
      ports:
-       - 8081:8081
+       - 8080:80
+   webplantilla:
+    build: ./webplantilla/salient
+    ports:
+      - 8081:80
