--- a/compose.yml
+++ b/compose.yml
@@ -3,6 +3,10 @@
      build: ./api-students
      ports:
        - 8000:8000
+   websimple:
+    build: ./websimple
+    ports:
+     - 8080:80
    webplantilla:
     build: ./webplantilla/salient
     ports:
